--- a/Documents/Builds/multilingual-chat-app/package.json
+++ b/Documents/Builds/multilingual-chat-app/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "firebase": "^10.8.1",
+    "firebase-admin": "^12.0.0",
     "lucide-react": "^0.344.0",
     "next": "14.1.1",
     "next-auth": "^4.24.6",
